# django-tasks-concurrent

./: .gitignore  LICENSE  Makefile  README.md  conftest.py  pyproject.toml
.githooks/: pre-commit.sh
django_tasks_concurrent/: __init__.py  worker.py
django_tasks_concurrent/management/commands/: concurrent_worker.py
tests/: test_command.py  test_worker.py
