[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-tasks-concurrent"
version = "0.1.0"
description = "Concurrent async worker for Django Tasks (django-tasks)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Harp Bola" }
]
keywords = ["django", "tasks", "async", "concurrent", "worker", "asyncio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "django>=6.0",
    "django-tasks>=0.5.0",
    "asgiref>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/harpb/django-tasks-concurrent"
Documentation = "https://github.com/harpb/django-tasks-concurrent#readme"
Repository = "https://github.com/harpb/django-tasks-concurrent.git"
Issues = "https://github.com/harpb/django-tasks-concurrent/issues"

[tool.hatch.build.targets.wheel]
packages = ["django_tasks_concurrent"]

[tool.hatch.build.targets.sdist]
include = [
    "django_tasks_concurrent/",
    "README.md",
    "LICENSE",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "W",  # pycodestyle warnings
    "B",  # flake8-bugbear
    "I",  # isort
    "UP", # pyupgrade
    "RUF", # Ruff-specific
    "PLC0415",  # import-outside-toplevel
]
ignore = [
    "E501",  # Line too long (handled by line-length)
    "B904",  # Raise from err
    "RUF012",
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"*/tests/*" = ["PLR2004", "S101"]
"test_*.py" = ["PLR2004", "S101"]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["django_tasks_concurrent"]
known-third-party = ["django", "django_tasks"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
